add edit functionality
