# docs/swagger.json
@@ -73,38 +73,6 @@
                     }
                 }
             },
-            "put": {
-                "description": "EditSpaceCraft",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "space-craft"
-                ],
-                "summary": "EditSpaceCraft",
-                "parameters": [
-                    {
-                        "description": "Edit payload",
-                        "name": "space-craft",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/request.SpaceShipEditRequest"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/controller.JsonResponse-bool"
-                        }
-                    }
-                }
-            },
             "post": {
                 "description": "CreateSpaceCraft",
                 "consumes": [
@@ -158,6 +126,45 @@
                         "name": "id",
                         "in": "path",
                         "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/controller.JsonResponse-response_SpaceCraftResponse"
+                        }
+                    }
+                }
+            },
+            "put": {
+                "description": "EditSpaceCraft",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "space-craft"
+                ],
+                "summary": "EditSpaceCraft",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "space-craft id",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "Edit payload",
+                        "name": "space-craft",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/request.SpaceShipEditRequest"
+                        }
                     }
                 ],
                 "responses": {
@@ -227,6 +234,29 @@
                 },
                 "message": {
                     "type": "string"
+                },
+                "success": {
+                    "type": "boolean"
+                }
+            }
+        },
+        "controller.JsonResponse-response_SpaceCraftResponse": {
+            "type": "object",
+            "properties": {
+                "code": {
+                    "type": "integer"
+                },
+                "data": {
+                    "$ref": "#/definitions/response.SpaceCraftResponse"
+                },
+                "error": {
+                    "$ref": "#/definitions/controller.ErrorResponse"
+                },
+                "message": {
+                    "type": "string"
+                },
+                "success": {
+                    "type": "boolean"
                 }
             }
         },
@@ -271,7 +301,70 @@
             }
         },
         "request.SpaceShipEditRequest": {
-            "type": "object"
+            "type": "object",
+            "properties": {
+                "class": {
+                    "type": "string"
+                },
+                "crew": {
+                    "type": "integer"
+                },
+                "image": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "status": {
+                    "type": "string"
+                },
+                "value": {
+                    "type": "number"
+                }
+            }
+        },
+        "response.SpaceCraftArmamentResponse": {
+            "type": "object",
+            "properties": {
+                "qty": {
+                    "type": "integer"
+                },
+                "title": {
+                    "type": "string"
+                }
+            }
+        },
+        "response.SpaceCraftResponse": {
+            "type": "object",
+            "properties": {
+                "armament": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/response.SpaceCraftArmamentResponse"
+                    }
+                },
+                "class": {
+                    "type": "string"
+                },
+                "crew": {
+                    "type": "integer"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "image": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "status": {
+                    "type": "string"
+                },
+                "valued": {
+                    "type": "number"
+                }
+            }
         }
     }
 }
